# MPCWallet

./: .gitignore  CONFIG_GUIDE.md  CPP_SERVER.md  README.md  SETUP.md  access.md  android_studio_debug.sh  build.gradle  debug_environment.sh  debug_guide.sh  final_solution.sh  fix_android_studio.sh  fix_run_config.sh  gradle.properties  gradlew  one_click_fix.sh  package-lock.json  package.json  quick_build.sh  quick_debug.sh  run_config_guide.md  settings.gradle  verify_project.sh  调试指南.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
client/: README-PORT.md  package-lock.json  package.json  start.js
client/public/: index.html
client/src/: App.css  App.js  index.css  index.js
client/src/components/: Dashboard.js  Header.js  MPCDataModal.js  Transaction.js  WalletCreate.js  WalletJoin.js  WalletList.js
client/src/contexts/: MPCContext.js  NetworkContext.js  WalletContext.js
cpp_server/: CMakeLists.txt  COMPARISON.md  Makefile  README.md  REAL_MPC_INTEGRATION.md  install_cbmpc.sh  mpc_server.cpp  mpc_server_real.cpp  mpc_wallet_server  start.sh
cpp_server/include/: common.h  server.h
cpp_server/include/routes/: blockchain_routes.h  mpc_routes.h  transaction_routes.h  wallet_routes.h
cpp_server/src/: main.cpp  server.cpp  server_simple.cpp
cpp_server/src/utils/: json_utils.cpp
go_mpcwallet/mpc-wallet-app/: README.md
go_mpcwallet/mpc-wallet-app/backend/: Makefile  README.md  go.mod  go.sum  main.go
go_mpcwallet/mpc-wallet-app/frontend/: package-lock.json  package.json
gradle/wrapper/: gradle-wrapper.properties
server/: env.example  index.js  package-lock.json  package.json
server/src/routes/: blockchain.js  mpc.js  transaction.js  wallet.js
server/src/services/: blockchainService.js  fileStorageService.js  (+3 more)
(+43 files in other folders)
